public/css/style.css
body{
    display: flex;
    flex-direction: column;
    min-height: 100vh;
}
.container{
    flex: 1;
}

.navbar{
    /* background-color: rgb(228, 232, 238) !important; */
    background-color: rgb(229 230 216) !important;
    height: 5rem;
}
.navbar-collapse{
    /* background-color: rgb(228, 232, 238) !important; */
     background-color: rgb(229 230 216) !important;
}
.logo{
    border-radius: 25px;
}
.nav-link{
    color: black !important;
}
.nav-link:hover{
    color: rgb(116, 32, 32) !important;
}
.save-one{
    display: flex;
}
.unsave-btn{
    padding: 2px;
    margin: 3px;
}

/* footer */
.footer{
    /* background-color: rgb(226, 241, 245); */
     background-color: rgb(229 230 216) !important;
    text-align: center;
    height: 5rem;
}
.social-logo{
    color: black;
}
.social-logo:hover{
    color: rgb(146, 92, 117);
    cursor: pointer;
}
.f-link a{
    text-decoration: none;
}
.f-link a:hover{
    text-decoration: underline;
    cursor: pointer;
}

.review-card{
    border-radius: 2px solid black !important;
}

/* card */
.listing-card{
    border: none !important;
    margin-bottom: 3rem;
}
.card-img-top{
    border-radius: 12px !important;
    width: 100% !important;
    object-fit: cover !important;
}
.listing-card-body{
    padding: 2px;
    display: grid;
    justify-content: center;
}
.card-text{
    margin: 2px !important;
}

.index-two-btn{
    display: flex;
    justify-content: center;
    /* gap: 2rem; */
}
.buy-btn{
    margin-right: 2rem;
    /* background-color: rgb(105, 18, 187) !important; */
    background-color: rgb(12, 101, 128) !important;
    border: none !important;
}
.buy-btn:hover{
    /* background-color: rgb(52, 6, 94) !important; */
    background-color: rgb(9, 74, 94) !important;
}
.button-save{
    background-color: #2c672a !important;
}
.img-anchor:hover{
    opacity: 0.8;
    background-color: white;
}

.about-para{
    color: rgb(136, 62, 75) !important;
}

/* show page */
.show-img{
    height: 40vh !important;
    width: 60vw !important;
}

.show-button{
    display: flex;
    justify-content: center;
    gap: 5px;
    align-items: center;
}

.buy-btn-show{
    padding-right: 30px;;
    padding-left: 30px;;
    margin-right: 2rem;
    margin-left: 2rem;
    background-color: rgb(12, 101, 128) !important;
    /* background-color: rgb(105, 18, 187) !important; */
    border: none !important;
}
.all-li{
    margin-left: 2rem;
}

/* available color */
.available-yes-color{
    color: rgb(68, 186, 68) !important;
    font-weight: bold;
}
.available-no-color{
    color: red !important;
    font-weight: bold;
}

.nav-email{
    color: rgb(186, 28, 167) !important;
}

.review-login-to-submit{
    color: red ;
}

.forgot-password-link{
    
    text-decoration: none;
    margin-left: 70%;
}
.payment-para{
    color: red;
}

.stars-text-color{
    color: rgb(228, 196, 16) !important;
}

.site-name{
    font-size: xx-large;
    /* color: rgb(117, 168, 46); */
    color: rgb(71, 109, 17);
    /* color: black; */
}

@media(min-width:1400px){

    .site-name{
        font-size : 50px;
        position: absolute;
        left: 50%;
        transform: translateX(-50%);
    }

}

/* .site-name{
    font-family: emoji ;
} */
.site-name{
    font-family: "Changa One", sans-serif;
}
.site-name{
    font-family: "Fredericka the Great", sans-serif;
}
.site-name{
    font-family: "Nerko One", sans-serif;
}

